Fixed - Font-size from input form's placeholders; - Menu mobile spacing; - Font-size from "Ideativos"; - Video size and padding from "Quem somos" page.
Added
- "Artigos" JS file to align and balance the height from items on
desktop.

--- a/assets/less/bootstrap-3-mobile-menu-breakon-tablet.less
+++ b/assets/less/bootstrap-3-mobile-menu-breakon-tablet.less
@@ -13,6 +13,9 @@
       padding: 0;
       text-indent: -161187em
     }
+    .navbar-toggle .icon-bar{
+      .round-borders(0)
+    }
     ul.nav.navbar-nav{
       li{
         &:hover a, &:focus a, &.active a {
@@ -57,6 +60,13 @@
       li a:hover::before, li a:focus::before, li.active a::before{
         max-width: 100%
       }
+    }
+  }
+
+  @media (max-width: 767px){
+    .navbar-nav li a{
+      font-size: 24px;
+      line-height: 24px;
     }
   }
   @media (min-width: 768px) {
@@ -181,13 +191,7 @@
       }
       .navbar-nav {
         float: none!important;
-        @media (min-width: 768px){
-          margin: 50px 0;
-        }
-        @media (max-width: 767px){
-          margin: 35px 0;
-        }
-
+        margin: 65px 0;
 
         > li {
           float: none;
@@ -210,10 +214,6 @@
               font-size: 30px;
               line-height: 30px;
             }
-            @media (max-width: 767px){
-              font-size: 24px;
-              line-height: 24px;
-            }
 
             padding-top: 5px;
             padding-bottom: 10px;
@@ -231,12 +231,7 @@
 
 
           &.sm-instagram {
-            @media (max-width: 767px){
-              margin-top: 10px;
-            }
-            @media (min-width: 768px) and (max-width: 1200px){
-              margin-top: 35px;
-            }
+            margin-top: 60px;
           }
         }
       }
