--- a/assets/less/form.less
+++ b/assets/less/form.less
@@ -74,11 +74,11 @@
   ::placeholder { color: lighten(@dark-color, 10%) }
 
   @media (min-width: 1201px){
-    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */ font-size:20px }
-    ::-moz-placeholder { /* Firefox 19+ */ font-size:20px }
-    :-ms-input-placeholder { /* IE 10+ */ font-size:20px }
-    :-moz-placeholder { /* Firefox 18- */ font-size:20px }
-    ::placeholder { font-size:20px }
+    ::-webkit-input-placeholder { /* Chrome/Opera/Safari */ font-size:18px }
+    ::-moz-placeholder { /* Firefox 19+ */ font-size:18px }
+    :-ms-input-placeholder { /* IE 10+ */ font-size:18px }
+    :-moz-placeholder { /* Firefox 18- */ font-size:18px }
+    ::placeholder { font-size:18px }
   }
   @media (max-width: 1200px){
     ::-webkit-input-placeholder { /* Chrome/Opera/Safari */ font-size:16px }
