--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -271,7 +271,7 @@ body.mobile-menu-open {
       position: relative;
       padding-bottom: 56.25%;
       /* 16:9 */
-      padding-top: 15px;
+      padding-top: 9px;
       height: 0;
 
       embed,
@@ -604,7 +604,7 @@ body.mobile-menu-open {
       padding-bottom: 60px;
 
       &.video_wrapper {
-        padding: 0 30px;
+        padding: 0 40px;
       }
 
       &.half-pad {
