--- a/assets/less/quem-somos.less
+++ b/assets/less/quem-somos.less
@@ -28,7 +28,7 @@
     p{
       color:@main-color;
       min-height: 50px;
-      font-size: 12px;
+      font-size: 14px;
       line-height: 18px;
       margin-bottom:20px
     }
